spacing revisions and commas now correct color

--- a/wp-content/themes/aerospace/assets/_scss/pages/_archives.scss
+++ b/wp-content/themes/aerospace/assets/_scss/pages/_archives.scss
@@ -210,45 +210,45 @@
 
 //Styles for featured posts on Space Threat tag archive
 .archive__featured-posts {
-  background-color: $dark-blue;
+	background-color: $dark-blue;
   margin: -8px;
   margin-bottom: 50px;
 
-  @include breakpoint('medium') {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @include breakpoint('large') {
-    margin: 0;
-  }
-
-  .entry-thumbnail,
-  .entry-main {
+  .entry-thumbnail, .entry-main {
     @include breakpoint('medium') {
       padding-right: 0;
       padding-left: 0;
     }
+  } 
+
+	@include breakpoint('medium') {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
+
+	@include breakpoint('large') {
+		margin: 0;
+	}
 
   .hentry {
     padding: $archive-content-padding-featured;
 
-    @include breakpoint('medium') {
-      padding: $archive-content-padding-featured-md;
-    }
-    @include breakpoint('large') {
-      padding: $archive-content-padding-featured-lg;
-    }
+		@include breakpoint('medium') {
+			padding: $archive-content-padding-featured-md;
+      padding-bottom:0;
+		}
+		@include breakpoint('large') {
+			padding: $archive-content-padding-featured-lg;
+		}
   }
 
   .entry-title a {
     color: $white;
   }
 
-  a:hover {
-    color: $orange !important;
-  }
+	a:hover {
+		color: $orange !important;
+	}
 
   .card-format .entry-header .entry-title {
     margin-bottom: $archive-content-title-margin-bottom;
@@ -259,27 +259,31 @@
     margin-bottom: $archive-content-byline-margin-bottom;
   }
 
-  .card-format .entry-thumbnail {
-    margin-bottom: 0;
+	.card-format .entry-thumbnail{
+		margin-bottom: 0;
 
-    @include breakpoint('medium') {
-      width: 100%;
-      max-width: 100%;
-      img {
-        width: 100%;
-      }
-    }
-  }
+			@include breakpoint('medium') {
+					width: 100%;
+					max-width: 100%;
+					img{
+						width: 100%;
+					}
+			}
+		}
 
   .authors-list a,
   .entry-date,
   .entry-content p,
-  .cat-links li a {
-    color: $white;
+  .cat-links li a,
+  li:after,
+  .entry-meta {
+    color: $white !important;
     opacity: 0.9;
   }
 
-  .meta-label,
+
+
+	.meta-label,
   .authors-list:after,
   .post-format {
     color: $white;
@@ -299,11 +303,11 @@
   }
 
   .post {
-    background-color: $dark-blue;
+		background-color: $dark-blue;
 
     @include breakpoint('medium') {
       display: grid;
-      grid-template-rows: max-content auto;
+			grid-template-rows: max-content auto;
     }
 
     &:first-child {
@@ -315,31 +319,36 @@
       }
     }
 
-    &:nth-child(2) {
-      @include breakpoint('medium') {
-        margin-right: $archive-content-margin-featured-right-md;
+		&:nth-child(2) {
+			@include breakpoint('medium') {
+				margin-right: $archive-content-margin-featured-right-md;
         padding: $archive-content-padding-featured-md;
-        padding-right: 0;
-      }
-    }
+				padding-right: 0;
+			}
+		}
 
-    &:nth-child(3) {
-      @include breakpoint('medium') {
-        margin-left: $archive-content-margin-featured-left-md;
+		&:nth-child(3) {
+			@include breakpoint('medium') {
+				margin-left: $archive-content-margin-featured-left-md;
         padding: $archive-content-padding-featured-md;
-        padding-left: 0;
-      }
-    }
+				padding-left: 0;
+			}
+		}
 
     &:nth-child(2),
     &:nth-child(3) {
       @include breakpoint('medium') {
+        padding-bottom: $archive-content-padding-featured-bottom-md;
+
         .entry-thumbnail a {
           height: 332px;
         }
-        .entry-thumbnail img {
-          height: 100%;
-        }
+				.entry-thumbnail img {
+					height: 100%;
+				}
+      }
+      @include breakpoint('large') {
+        padding-bottom: $archive-content-padding-featured-bottom-lg;
       }
     }
   }
